--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         }
         h1 {
             color: #333;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
         #video {
             width: 90%;
-            max-width: 600px;
+            height: 90%;
             border: 2px solid #333;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         #output {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 1.2em;
             color: #333;
             text-align: center;
