--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     });
                     if (code) {
                         output.innerText = "QRコードが見つかりました: " + code.data;
+                        window.location.href = "https://www.figma.com/proto/NsOdjwScyO1EGn2EVCtdta/%E5%BB%A3%E4%BA%95-%E5%A4%8F%E8%BC%9D?node-id=1-13&t=aVOinJve9BNmDcwe-1&starting-point-node-id=1%3A13";
                     } else {
                         output.innerText = "QRコードをスキャン中...";
                     }
