--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 70vh;
+            height: 80vh; /* 高さを80%に調整 */
             margin: 0;
             background-color: #f7f9fc;
         }
@@ -21,7 +21,7 @@
         }
         #video {
             width: 90%;
-            height: 70%;
+            height: 70%; /* 高さを70%に調整 */
             border: 2px solid #333;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
